# parafia-szopka

./: .gitignore  README.md  config-template.yaml  first.py  motion_reader.py  periods.py  plug_utils.py  pyproject.toml  second.py  start.bat  start.sh  szopka_na_monety.py  szopka_na_ruch.py  test-periods.py  third.py  uruchom-szopke.bat  utils.py
old-notebooks/: Pipfile  fourth.py
sketch_pir/: README.md  sketch_pir.ino
test-data/: motion-data.txt
